# binary-segmentation-angio

./: .gitignore  README.md  pyproject.toml
scripts/: download_dataset.sh  test_prediction_binary.py  train_binary.py
src/binseg/: config.py  train.py
src/binseg/data/: dataset.py  lightning_binary.py  preprocess.py
src/binseg/model/: binary_segmentation.py  deeplab.py
src/binseg/util/: loss.py
